# sta-rs

./: .gitmodules  Cargo.toml  README.md  SECURITY.md  renovate.json
.github/workflows/: audit.yml  audit_new.yml  lint.yml  nostd.yml  tests.yml  wasm.yml
adss/: Cargo.toml  README.md
adss-rs/: Cargo.toml
adss-rs/src/: lib.rs
adss/src/: lib.rs
benches/: bench.rs
ppoprf/: Cargo.toml
ppoprf/benches/: bench.rs
ppoprf/examples/: client.rs  server.rs
ppoprf/src/: ggm.rs  lib.rs  ppoprf.rs  strobe_rng.rs
ppoprf/src/snapshots/: ppoprf__ppoprf__tests__pk_serialization.snap
sharks/: CHANGELOG.md  Cargo.toml  README.md
sharks/benches/: benchmarks.rs
sharks/fuzz/: Cargo.toml
sharks/fuzz/fuzz_targets/: deserialize_share.rs  generate_shares.rs  recover.rs  serialize_share.rs
sharks/src/: lib.rs  math.rs  share.rs  share_ff.rs
src/: lib.rs
sta-rs/: Cargo.toml  SECURITY.md
sta-rs/benches/: bench.rs
sta-rs/src/: lib.rs
sta-rs/test-utils/: Cargo.toml
sta-rs/test-utils/src/: lib.rs
sta-rs/tests/: e2e.rs
star/: Cargo.toml  README.md
star-wasm/: Cargo.toml  Makefile
star-wasm/src/: lib.rs
star-wasm/www/: .eslintrc.js  Makefile  index.html  index.js  package.json  server.js  webpack.config.js
star/benches/: bench.rs
star/src/: lib.rs
star/test-utils/: Cargo.toml
star/test-utils/src/: lib.rs
star/tests/: e2e.rs
strobe-rng/: Cargo.toml
strobe-rng/src/: lib.rs
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
www/: README.md  index.js  package-lock.json
