[package]
name = "adss-rs"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.7.1"
strobe-rng = { path = "../strobe-rng" }
rand = "0.8.4"
zeroize = "1.5.5"

[dependencies.sharks]
default-features = true
version = "0.5.0"
path = "../sharks"
