[package]
name = "adss-rs"
version = "0.2.0"
authors = ["eV <ev@7pr.xyz>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.8.1"
strobe-rng = { path = "../strobe-rng" }
rand = "0.8.5"
zeroize = "1.6.0"

[dependencies.sharks]
default-features = false
version = "0.5.0"
path = "../sharks"
features = ["zeroize_memory"]
