[package]
name = "adss-rs"
version = "0.2.0"
authors = ["eV <ev@7pr.xyz>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.8.1"
rand = "0.8.5"
rand_core = "0.6.4"
zeroize = "1.5.5"

[dependencies.sharks]
default-features = false
version = "0.5.0"
path = "../sharks"
features = ["zeroize_memory"]
