[package]
name = "ppoprf"
version = "0.2.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = [ "getrandom" ] }
rand_core_ristretto = { version="0.5.1", package="rand_core", default-features = false }
bitvec = "1.0.1"
curve25519-dalek =  { version = "3.2.0", features = [ "serde" ] }
serde = "1.0.147"
strobe-rs = "0.8.1"
strobe-rng = { path = "../strobe-rng" }
base64 = "0.13.0"
bincode = "1.3.3"
derive_more = "0.99"
zeroize = { version = "1.5.5", features = [ "derive" ] }

[dev-dependencies]
criterion = "0.4.0"
env_logger = "0.9.3"
log = "0.4.18"
reqwest = { version = "0.11.18", features = [ "blocking", "json" ] }
dotenvy = "0.15.7"
insta = "1.29.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }
warp = "0.3.5"

[[bench]]
name = "bench"
harness = false
