[package]
name = "sta-rs"
version = "0.1.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adss-rs = { path = "../adss-rs" }
ring = "0.16.20"

# ppoprf = { git = "ssh://git@github.com/brave-experiments/ppoprf", rev = "73cd5e3d3758e34b85f71908bacdb034bc05926d", optional = true }

[dev-dependencies]
criterion = "0.3.1"
sta-rs-test-utils = { path = "./test-utils" }
rand = { version = "0.7", default-features = false }

[features]
star2 = ["sta-rs-test-utils/star2"]

[[bench]]
name = "bench"
harness = false
