[package]
name = "sta-rs"
version = "0.1.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.7.1"
strobe-rng = { path = "../strobe-rng" }
adss-rs = { path = "../adss-rs" }
ppoprf = { path = "../ppoprf" }
ring = "0.16.20"
rand_core = "0.6.3"
zeroize = "1.5.4"

[dev-dependencies]
criterion = "0.3.5"
sta-rs-test-utils = { path = "./test-utils" }
rand = { version = "0.7", default-features = false }

[features]
star2 = ["sta-rs-test-utils/star2"]

[[bench]]
name = "bench"
harness = false
