[package]
name = "sta-rs"
version = "0.2.0"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.8.1"
strobe-rng = { path = "../strobe-rng" }
adss-rs = { path = "../adss-rs" }
ppoprf = { path = "../ppoprf" }
rand = "0.8.5"
zeroize = "1.6.0"

[dev-dependencies]
criterion = "0.4.0"
sta-rs-test-utils = { path = "./test-utils" }
rand = { version = "0.8.5", features = [ "std" ] }

[features]
star2 = ["sta-rs-test-utils/star2"]

[[bench]]
name = "bench"
harness = false
