[package]
name = "star-wasm"
version = "0.2.1"
authors = ["Rémi Berson <remi@brave.com>"]
description = "WASM bindings for the STAR protocol"
repository = "https://github.com/brave/sta-rs"
keywords = ["crypto", "protocol", "privacy", "analytics", "wasm"]
categories = ["cryptography", "algorithms", "webassembly"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
sta-rs = { path = "../star", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
base64 = "0.20"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"
