[package]
name = "star-wasm"
version = "0.1.0"
authors = ["Rémi Berson <remi@brave.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
sta-rs = { path = "../", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# TODO - needed?
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
