[package]
name = "star-wasm"
version = "0.1.0"
authors = ["Rémi Berson <remi@brave.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
sta-rs = { path = "../", default-features = false }
adss-rs = { path = "../secret-sharing/adss-rs" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
base64 = "0.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
