[package]
name = "sta-rs-test-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sta-rs = { path = "../" }
rand = { version = "0.7", default-features = false }
rayon = "1.5"
zipf = "6.1.0"
ring = "0.16.20"

# ppoprf = { git = "ssh://git@github.com/brave-experiments/ppoprf", rev = "73cd5e3d3758e34b85f71908bacdb034bc05926d", optional = true }

[features]
star2 = ["sta-rs/star2"]
