[package]
name = "star-test-utils"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strobe-rs = "0.8.1"
sta-rs = { path = "../" }
rand = { version = "0.8.5", features = [ "std" ] }
rayon = "1.7"
zipf = "7.0.0"
ppoprf = { path = "../../ppoprf" }
